<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>so101_rui</name>
  <version>0.1.0</version>
  <description>Robot User Interface for the SO-101 arm — teleoperation, motor connect/enable/disable</description>
  <maintainer email="rowbotworks@gmail.com">Yong</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>sensor_msgs</depend>
  <depend>rosbridge_server</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
